--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="dark">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -15,11 +15,11 @@
         rel="stylesheet">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-     <link rel="stylesheet" href="./css/styles.css">   
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
-    <p class="display-large">Typograpghy</p>
+    <!-- <p class="display-large">Typograpghy</p>
     <p class="display-medium">Typograpghy</p>
     <p class="display-small">Typograpghy</p>
     <p class="headline-large">Typograpghy</p>
@@ -33,9 +33,22 @@
     <p class="body-small">Typograpghy</p>
     <p class="label-large">Typograpghy</p>
     <p class="label-medium">Typograpghy</p>
-    <p class="label-small">Typograpghy</p>
+    <p class="label-small">Typograpghy</p> -->
 
-<script src="./js/script.js"></script>
+    <header class="topbar">
+        <a href="#" class="logo">
+            <img src="./assets/images/Logo_dark.png" alt="DevFolio" width="145" height="32" class="dark">
+            <img src="./assets/images/Logo_light.png" alt="DevFolio" width="145" height="32" class="light">
+        </a>
+
+        <button class="icon-btn theme-btn" data-theme-btn>
+            <span class="material-symbols-outlined dark" aria-hidden="true">dark_mode</span>
+            <span class="material-symbols-outlined light" aria-hidden="true">light_mode</span>
+        </button>
+
+    </header>
+
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
